Agregue informacion de electripacifico

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <h3>Tu portafolio</h3>
 
       <a href="http://www.webflucas.blobspot.com"><p>Webflucas.com</p></a>
+      <a href="http://www.facebook.com/electripacifico"><p>Electripacifico.co</p></a>
       
 
       
